--- a/_posts/2011-11-20-github.textile
+++ b/_posts/2011-11-20-github.textile
@@ -7,13 +7,9 @@ h1. {{ page.title }}
 
 p(meta). Nov 20 2011
 
-Basically Scott Henson and I thought this would make it a lot easier to collaborate with everyone, and also this would help
-increase our upstream we-accept-everyone's-contributions kind of focus.   A huge thanks to Fedora for hosting us for all
-of these years.
+Basically Scott Henson and I thought this would make it a lot easier to collaborate with everyone, and also this would help increase our upstream we-accept-everyone's-contributions kind of focus.   A huge thanks to Fedora for hosting us for all of these years.
 
-Please use the issue tracker for all issues, and fork the project and use pull requests for contributing code.
-This documentation site is *itself* on github, so you can submit patches here as well.  We'll continue to use
-the fedorahosted.org mailing lists for project coordination, though we are otherwise discontinuing usage of Trac.
+Please use the issue tracker for all issues, and fork the project and use pull requests for contributing code. This documentation site is *itself* on github, so you can submit patches here as well.  We'll continue to use the fedorahosted.org mailing lists for project coordination, though we are otherwise discontinuing usage of Trac.
 
 <A HREF="http://github.com/cobbler/">Source & issue tracker</A>
 
