Added an author and date to posts, removed the "read more" link which is useless for now

--- a/_posts/2012-06-17-cobbler_2.2.3-2_released.md
+++ b/_posts/2012-06-17-cobbler_2.2.3-2_released.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Cobbler 2.2.3-2 Released
+author: James
 ---
 Minor release update to correct the DHCP config writing issue:
 
