--- a/loaders/README
+++ b/loaders/README
@@ -14,7 +14,7 @@ This is further complicated by Fedora not supporting IA64 and needing to provide
 the same content to Debian and other install bases using the install server.
 
 So, to faciliate providing content for users that do not wish to source content manually
-these are supplied from fedorapeople.org as an optional way of getting that content.
+these are supplied from cobblerd.org as an optional way of getting that content.
 
 Users may also want to use the latest versions of these packages from source or supply
 their own from another source -- these are provided only for convience.  
