Create links in release announcements

--- a/_rawposts/_posts/2014-02-03-cobbler_2.4.1_released.md
+++ b/_rawposts/_posts/2014-02-03-cobbler_2.4.1_released.md
@@ -37,6 +37,6 @@ Bugfixes:
 * Several WSGI related improvements
 * Many more...
 
-The (source) release can be found at: https://github.com/cobbler/cobbler/releases/tag/v2.4.1
+The (source) release can be found at: <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.1">https://github.com/cobbler/cobbler/releases/tag/v2.4.1</a>
 
 Thanks to everyone who made this release possible!
