--- a/_rawposts/_posts/2014-02-15-cobbler_2.4.2_released.md
+++ b/_rawposts/_posts/2014-02-15-cobbler_2.4.2_released.md
@@ -17,5 +17,5 @@ Bugfixes:
 * Corrected AutoYaST XML generation when scripts are included
 * Fix elilo and yaboot filenames in dhcp configuration
 
-The (source) release can be found at: https://github.com/cobbler/cobbler/releases/tag/v2.4.2
+The (source) release can be found at: <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.2">https://github.com/cobbler/cobbler/releases/tag/v2.4.2</a>
 
