--- a/_rawposts/_posts/2014-04-22-cobbler_2.4.4_released.md
+++ b/_rawposts/_posts/2014-04-22-cobbler_2.4.4_released.md
@@ -13,7 +13,7 @@ Improved Features:
 
 Bugfixes:
 
-* #784. Fix infinite loop in get_file_device_path() in chroot environment
+* Bug 784. Fix infinite loop in get_file_device_path() in chroot environment
 * Improve performance of the "cobbler sync" operation
 * Fixed an Exception in Koans get_insert_script() function
 
