Make release note smore user oriented

--- a/_rawposts/_posts/2014-04-22-cobbler_2.4.4_released.md
+++ b/_rawposts/_posts/2014-04-22-cobbler_2.4.4_released.md
@@ -10,11 +10,12 @@ Improved Features:
 
 * Add a distro_signature for Ubuntu 14.04
 * Add an option to always write DHCP entries regardless of netboot setting
+* Improve support for running inside chroot() and/or containers
+* Improve performance of the "cobbler sync" operation
 
 Bugfixes:
 
-* Bug 784. Fix infinite loop in get_file_device_path() in chroot environment
-* Improve performance of the "cobbler sync" operation
+* Fix infinite loop in get_file_device_path() in chroot environment
 * Fixed an Exception in Koans get_insert_script() function
 
 The (source) release can be found <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.4">here</a>
