--- a/_rawposts/_posts/2014-07-15-cobbler_2.6.2_released.md
+++ b/_rawposts/_posts/2014-07-15-cobbler_2.6.2_released.md
@@ -21,10 +21,10 @@ Bugfixes:
 
 * pre_install_network_config: only use slaves with a valid MAC address
 * Remove colon from VLAN regex pattern
-* #148. Improve exception logging in BootCLI
+* 148. Improve exception logging in BootCLI
 * Item.set_name optimizations
-* #217. Minor improvement to LDAP configuration
-* #555. Fixes to Makefile
+* 217. Minor improvement to LDAP configuration
+* 555. Fixes to Makefile
 
 
 Sourcecode:
