Change to downloads section

--- a/_dynamic/downloads/2.4.x.md
+++ b/_dynamic/downloads/2.4.x.md
@@ -1,14 +1,11 @@
 ---
 layout: default
-title: Source releases
+title: Cobbler 2.4.x
 ---
 
-## 2.6.x
+Maintenance of Cobbler 2.4.x is targeted at Enterprise Linux 5 (eg. RHEL5/CentOS5) and thus requires python 2.4
 
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.1">Cobbler 2.6.1</a>
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.0">Cobbler 2.6.0</a>
-
-## 2.4.x
+## Source
 
 * <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.5">Cobbler 2.4.5</a>
 * <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.4">Cobbler 2.4.4</a>
@@ -16,4 +13,10 @@ title: Source releases
 * <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.2">Cobbler 2.4.2</a>
 * <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.1">Cobbler 2.4.1</a>
 * <a href="https://github.com/cobbler/cobbler/releases/tag/cobbler-2.4.0-1">Cobbler 2.4.0</a>
+
+## Packages
+
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_18/">Fedora 18</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_19/">Fedora 19</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_20/">Fedora 20</a>
 
