--- a/_dynamic/downloads/2.6.x.md
+++ b/_dynamic/downloads/2.6.x.md
@@ -1,14 +1,22 @@
 ---
 layout: default
-title: Packages
+title: Cobbler 2.6.x
 ---
 
-## 2.6.x
+Maintenance of the Cobbler 2.6.x series is primarily targeted at Enterprise Linux 6 (eg. RHEL6/CentOS6) and therefore requires at least python 2.6.
 
-Development of Cobbler 2.6.x is targeted at Enterprise Linux 6 (eg. RHEL6/CentOS6) and thus requires python 2.6
+## Source
+
+* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.2">Cobbler 2.6.2</a>
+* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.1">Cobbler 2.6.1</a>
+* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.0">Cobbler 2.6.0</a>
+
+## Packages
 
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/CentOS_CentOS-6/">CentOS 6</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/CentOS_CentOS-7/">CentOS 7</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/RedHat_RHEL-6/">RHEL 6</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/RedHat_RHEL-7/">RHEL 7</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_18/">Fedora 18</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_19/">Fedora 19</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_20/">Fedora 20</a>
@@ -21,11 +29,4 @@ Development of Cobbler 2.6.x is targeted at Enterprise Linux 6 (eg. RHEL6/CentOS
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_13.10/">Ubuntu 13.10</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_14.04/">Ubuntu 14.04</a>
 
-## 2.4.x
-
-Development of Cobbler 2.4.x is targeted at Enterprise Linux 5 (eg. RHEL5/CentOS5) and thus requires python 2.4
-
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_18/">Fedora 18</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_19/">Fedora 19</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_20/">Fedora 20</a>
 
