--- a/_dynamic/downloads/2.6.x.md
+++ b/_dynamic/downloads/2.6.x.md
@@ -7,6 +7,7 @@ Maintenance of the Cobbler 2.6.x series is primarily targeted at Enterprise Linu
 
 ## Source
 
+* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.6">Cobbler 2.6.6</a>
 * <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.5">Cobbler 2.6.5</a>
 * <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.4">Cobbler 2.6.4</a>
 * <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.3">Cobbler 2.6.3</a>
@@ -25,8 +26,11 @@ Maintenance of the Cobbler 2.6.x series is primarily targeted at Enterprise Linu
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_20/">Fedora 20</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_12.3/">openSUSE 12.3</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.1/">openSUSE 13.1</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.2/">openSUSE 13.2</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_Factory/">openSUSE Factory</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Debian_7.0/">Debian 7</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/ScientificLinux_6/">Scientific Linux 6</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/ScientificLinux_7/">Scientific Linux 7</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_12.04/">Ubuntu 12.04</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_12.10/">Ubuntu 12.10</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_13.10/">Ubuntu 13.10</a>
