--- a/_rawposts/_posts/2014-10-19-cobbler_2.6.6_released.md
+++ b/_rawposts/_posts/2014-10-19-cobbler_2.6.6_released.md
@@ -22,7 +22,7 @@ Bugfixes
 * Blacklist gpgkey as an invalid option to the repo statement
 * gpgcheck / enabled are not valid in kickstart, only in config.repo
 * Updated man page to reflect the removal of URL support for kickstarts
-* Regression: \<<inherit\>> was not available as kickstart value
+* Regression: inherit was not available as kickstart value
 * Return right value from TftpdPyManager.what method
 * Fixed a typo in the power management API
 * Ensure all variables are available in PXE generation (\#505)
