Forgot to add ubuntu 15.10

--- a/_rawposts/_posts/2015-09-30-cobbler_2.6.10_released.md
+++ b/_rawposts/_posts/2015-09-30-cobbler_2.6.10_released.md
@@ -17,6 +17,7 @@ Feature improvements
 * Add openSUSE 13.2 to signatures
 * Add Debian Stretch (testing) to signatures
 * Add XenServer 6.5.0 to signatures
+* Add Ubuntu 15.10 to signatures
 
 
 Bugfixes
