--- a/_dynamic/downloads/2.6.x.md
+++ b/_dynamic/downloads/2.6.x.md
@@ -7,6 +7,7 @@ Maintenance of the Cobbler 2.6.x series is primarily targeted at Enterprise Linu
 
 ## Source
 
+* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.10">Cobbler 2.6.11</a>
 * <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.10">Cobbler 2.6.10</a>
 * <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.9">Cobbler 2.6.9</a>
 * <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.8">Cobbler 2.6.8</a>
@@ -28,6 +29,7 @@ Maintenance of the Cobbler 2.6.x series is primarily targeted at Enterprise Linu
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_20/">Fedora 20</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_21/">Fedora 21</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_22/">Fedora 22</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_23/">Fedora 22</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_12.3/">openSUSE 12.3</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.1/">openSUSE 13.1</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.2/">openSUSE 13.2</a>
@@ -40,5 +42,6 @@ Maintenance of the Cobbler 2.6.x series is primarily targeted at Enterprise Linu
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_14.04/">Ubuntu 14.04</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_14.10/">Ubuntu 14.10</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_15.04/">Ubuntu 15.04</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_15.10/">Ubuntu 15.10</a>
 
 
