Add SLE12 packages to downloads.

--- a/_dynamic/downloads/2.8.x.md
+++ b/_dynamic/downloads/2.8.x.md
@@ -30,4 +30,7 @@ title: Cobbler 2.8.x
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_14.04/">Ubuntu 14.04</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_16.04/">Ubuntu 16.04</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/xUbuntu_16.10/">Ubuntu 16.10</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/SLE_12/">SLES 12.0</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/SLE_12_SP1/">SLES 12.1</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/SLE_12_SP2/">SLES 12.2</a>
 
