Fix wrong paths in downloads 2.8.x

--- a/_dynamic/downloads/2.8.x.md
+++ b/_dynamic/downloads/2.8.x.md
@@ -9,11 +9,10 @@ title: Cobbler 2.8.x
 
 ## Packages
 
-
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/CentOS_CentOS-6/">CentOS 6</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/CentOS_CentOS-7/">CentOS 7</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/RedHat_RHEL-6/">RHEL 6</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/RedHat_RHEL-7/">RHEL 7</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/CentOS_6/">CentOS 6</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/CentOS_7/">CentOS 7</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/RHEL_6/">RHEL 6</a>
+* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/RHEL_7/">RHEL 7</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/Fedora_23/">Fedora 23</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/Fedora_24/">Fedora 24</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/openSUSE_13.2/">openSUSE 13.2</a>
@@ -33,4 +32,3 @@ title: Cobbler 2.8.x
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/SLE_12/">SLES 12.0</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/SLE_12_SP1/">SLES 12.1</a>
 * <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler28/SLE_12_SP2/">SLES 12.2</a>
-
