Remove the linkup plugin

--- a/_posts/2013-06-20-cobbler_2.4.0-1_released.md
+++ b/_posts/2013-06-20-cobbler_2.4.0-1_released.md
@@ -10,8 +10,8 @@ Some highlights of the release:
 
 Major Features:
 
-* {% linkup title:"Dynamic Settings" meta=2.4.0 %}
-* {% linkup title:"Distro Signatures" meta=2.4.0 %}
+* Dynamic Settings (Sorry we don't have 2.4.0 docs anymore)
+* Distro Signatures (Sorry we don't have 2.4.0 docs anymore)
 * Vastly improved support for Ubuntu, OpenSUSE and VMware ESXi (5.0 and 5.1)
 * Added in new templated scripting support (needs documentation)
 * New web interface improvements (tabs, etc.)
