Convert Markdown Links, Bullet Points and 120 char limit

--- a/_posts/2012-06-06-cobbler_2.2.3-1_released.md
+++ b/_posts/2012-06-06-cobbler_2.2.3-1_released.md
@@ -4,6 +4,7 @@ title: Cobbler 2.2.3-1 Released
 author: James
 summary: Announcing the release of Cobbler 2.2.3-1. This release includes fixes for the power management sub-system calls, in order to address several security vulnerabilities involving shell command injection.
 ---
+
 A quick highlight of the changes in this release:
 
 * Multiple security fixes:
@@ -17,4 +18,6 @@ A quick highlight of the changes in this release:
 
 And of course tons of bug fixes.
 
-Now that this release is out, and things have settled down from the change in leadership, expect much more frequent minor updates to address bugs much sooner. We will also be focusing on documentation now, especially since many of the features above are not documented well (or at all). Thanks to everyone who helped out with this release!
+Now that this release is out, and things have settled down from the change in leadership, expect much more frequent
+minor updates to address bugs much sooner. We will also be focusing on documentation now, especially since many of the
+features above are not documented well (or at all). Thanks to everyone who helped out with this release!
