--- a/downloads/2.4.x.md
+++ b/downloads/2.4.x.md
@@ -7,20 +7,20 @@ Maintenance of Cobbler 2.4.x is targeted at Enterprise Linux 5 (eg. RHEL5/CentOS
 
 ## Source
 
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.9">Cobbler 2.4.9</a>
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.8">Cobbler 2.4.8</a>
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.7">Cobbler 2.4.7</a>
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.6">Cobbler 2.4.6</a>
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.5">Cobbler 2.4.5</a>
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.4">Cobbler 2.4.4</a>
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.3">Cobbler 2.4.3</a>
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.2">Cobbler 2.4.2</a>
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.4.1">Cobbler 2.4.1</a>
-* <a href="https://github.com/cobbler/cobbler/releases/tag/cobbler-2.4.0-1">Cobbler 2.4.0</a>
+- [Cobbler 2.4.9](https://github.com/cobbler/cobbler/releases/tag/v2.4.9)
+- [Cobbler 2.4.8](https://github.com/cobbler/cobbler/releases/tag/v2.4.8)
+- [Cobbler 2.4.7](https://github.com/cobbler/cobbler/releases/tag/v2.4.7)
+- [Cobbler 2.4.6](https://github.com/cobbler/cobbler/releases/tag/v2.4.6)
+- [Cobbler 2.4.5](https://github.com/cobbler/cobbler/releases/tag/v2.4.5)
+- [Cobbler 2.4.4](https://github.com/cobbler/cobbler/releases/tag/v2.4.4)
+- [Cobbler 2.4.3](https://github.com/cobbler/cobbler/releases/tag/v2.4.3)
+- [Cobbler 2.4.2](https://github.com/cobbler/cobbler/releases/tag/v2.4.2)
+- [Cobbler 2.4.1](https://github.com/cobbler/cobbler/releases/tag/v2.4.1)
+- [Cobbler 2.4.0](https://github.com/cobbler/cobbler/releases/tag/cobbler-2.4.0-1)
 
 ## Packages
 
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_20/">Fedora 20</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_21/">Fedora 21</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_22/">Fedora 22</a>
+- [Fedora 20](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_20/)
+- [Fedora 21](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_21/)
+- [Fedora 22](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler24/Fedora_22/)
 
