--- a/_posts/2014-08-15-cobbler_2.6.5_released.md
+++ b/_posts/2014-08-15-cobbler_2.6.5_released.md
@@ -11,23 +11,23 @@ All 2.6.x users are encouraged to upgrade to this version!
 
 Sourcecode:
 
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.5">https://github.com/cobbler/cobbler/releases/tag/v2.6.5</a>
+- [https://github.com/cobbler/cobbler/releases/tag/v2.6.5](https://github.com/cobbler/cobbler/releases/tag/v2.6.5)
 
 
 Packages:
 
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/CentOS_CentOS-6/">CentOS 6</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/CentOS_CentOS-7/">CentOS 7</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/RedHat_RHEL-6/">RHEL 6</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/RedHat_RHEL-7/">RHEL 7</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_18/">Fedora 18</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_19/">Fedora 19</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_20/">Fedora 20</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_12.3/">openSUSE 12.3</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.1/">openSUSE 13.1</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_Factory/">openSUSE Factory</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Debian_7.0/">Debian 7</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_12.04/">Ubuntu 12.04</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_12.10/">Ubuntu 12.10</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_13.10/">Ubuntu 13.10</a>
-* <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_14.04/">Ubuntu 14.04</a>
+- [CentOS 6](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/CentOS_CentOS-6/)
+- [CentOS 7](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/CentOS_CentOS-7/)
+- [RHEL 6](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/RedHat_RHEL-6/)
+- [RHEL 7](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/RedHat_RHEL-7/)
+- [Fedora 18](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_18/)
+- [Fedora 19](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_19/)
+- [Fedora 20](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Fedora_20/)
+- [openSUSE 12.3](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_12.3/)
+- [openSUSE 13.1](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_13.1/)
+- [openSUSE Factory](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/openSUSE_Factory/)
+- [Debian 7](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/Debian_7.0/)
+- [Ubuntu 12.04](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_12.04/)
+- [Ubuntu 12.10](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_12.10/)
+- [Ubuntu 13.10](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_13.10/)
+- [Ubuntu 14.04](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26/xUbuntu_14.04/)
