--- a/_posts/2015-09-30-cobbler_2.6.10_released.md
+++ b/_posts/2015-09-30-cobbler_2.6.10_released.md
@@ -4,6 +4,7 @@ title: Cobbler 2.6.10 Released
 author: Jörgen
 summary: Announcing the release of Cobbler 2.6.10.
 ---
+
 Cobbler 2.6.10 is now officially available!
 
 This release mostly just adds support for some distros.
@@ -11,24 +12,25 @@ This release mostly just adds support for some distros.
 
 Feature improvements
 
-* Use DNF when available (available on Fedora 22+)
-* Add Fedora 22 to signatures
-* Add Fedora 23 to signatures
-* Add openSUSE 13.2 to signatures
-* Add Debian Stretch (testing) to signatures
-* Add XenServer 6.5.0 to signatures
-* Add Ubuntu 15.10 to signatures
+- Use DNF when available (available on Fedora 22+)
+- Add Fedora 22 to signatures
+- Add Fedora 23 to signatures
+- Add openSUSE 13.2 to signatures
+- Add Debian Stretch (testing) to signatures
+- Add XenServer 6.5.0 to signatures
+- Add Ubuntu 15.10 to signatures
 
 
 Bugfixes
 
-* Do not install distro_signatures.json in /etc/cobbler
+- Do not install distro_signatures.json in /etc/cobbler
 
 
 Sourcecode:
 
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.6.10">https://github.com/cobbler/cobbler/releases/tag/v2.6.10</a>
+- [https://github.com/cobbler/cobbler/releases/tag/v2.6.10](https://github.com/cobbler/cobbler/releases/tag/v2.6.10)
 
 
-Packages will be provided as soon as possible, please check <a href="http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26">here</a>
+Packages will be provided as soon as possible, please check 
+[here](http://download.opensuse.org/repositories/home:/libertas-ict:/cobbler26)
 
