--- a/downloads/2.8.x.md
+++ b/downloads/2.8.x.md
@@ -5,9 +5,9 @@ title: Cobbler 2.8.x
 
 ## Source
 
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.8.2">Cobbler 2.8.2</a>
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.8.1">Cobbler 2.8.1</a>
-* <a href="https://github.com/cobbler/cobbler/releases/tag/v2.8.0">Cobbler 2.8.0</a>
+- [Cobbler 2.8.2](https://github.com/cobbler/cobbler/releases/tag/v2.8.2)
+- [Cobbler 2.8.1](https://github.com/cobbler/cobbler/releases/tag/v2.8.1)
+- [Cobbler 2.8.0](https://github.com/cobbler/cobbler/releases/tag/v2.8.0)
 
 
 ## Packages
