Fix markdown style

--- a/_posts/2019-10-20-cobbler_3.0.1_released.md
+++ b/_posts/2019-10-20-cobbler_3.0.1_released.md
@@ -2,7 +2,7 @@
 layout: post
 title: Cobbler 3.0.1 Released
 author: Enno
-summary: Announcing the release of Cobbler 3.0.1.
+summary: Announcing the release of Cobbler 3.0.1
 ---
 
 Cobbler 3.0.1 is now officially available!
