--- a/_posts/2020-12-04-windows.md
+++ b/_posts/2020-12-04-windows.md
@@ -63,19 +63,20 @@ and copy the Windows distributions there:
     dr-xr-xr-x. 1 root   root         456 Aug  8  2015 WinXp_EN-i386
 
 Copy the following files to the distributions directories (for Windows 7 and newer):
+
 PXE + Legacy BIOS Boot
-    - pxeboot.n12
-    - bootmgr.exe
-    - boot/BCD
-    - boot/boot.sdi
+- pxeboot.n12
+- bootmgr.exe
+- boot/BCD
+- boot/boot.sdi
 
 iPXE + UEFI BIOS Boot
-    - ipxe-x86_64.efi
-    - ipxe-x86_64.efi
-    - wimboot
-    - boot/bootx64.efi
-    - boot/BCD
-    - boot/boot.sdi
+- ipxe-x86_64.efi
+- ipxe-x86_64.efi
+- wimboot
+- boot/bootx64.efi
+- boot/BCD
+- boot/boot.sdi
 
 - Share `/var/lib/tftpboot/winos` via Samba:
 ```
@@ -547,26 +548,26 @@ Or create an iPXE boot menu
     boot
     < .. >
 
-###Final steps
+### Final steps
 
 - Restart the services:
-
+```bash
     systemctl restart cobblerd
     systemctl restart tftpd
     systemctl restart smb
     systemctl restart nmb
-
+```
 - add distros:
-
+```bash
     cobbler distro add –name=Win10_EN-x64 \
     --kernel=/var/lib/tftpboot/winos/Win10_EN-x64/pxeboot.n12 \
     --initrd=/var/lib/tftpboot/winos/Win10_EN-x64/boot/boot.sdi \
     --boot-loader=pxelinux \
     --arch=x86_64 --breed=windows –os-version=10 \
     --kernel-options='post_install=/var/lib/tftpboot/winos/Win10_EN-x64/sources/$OEM$/$1/post_install.cmd'
-
+```
 - and profiles:
-
+```bash
     cobbler profile add --name=Win10_EN-x64 --distro=Win10_EN-x64 --autoinstall=win.ks \
     --kernel-options='pxeboot=win10a.0, bootmgr=boot1ea.exe, bcd=1Ea,winpe=winpe.wim, sif=autounattended.xml'
     
@@ -575,6 +576,6 @@ Or create an iPXE boot menu
     
     cobbler profile add --name=Win10-profile2 --parent=Win10_EN-x64 \
     --kernel-options='pxeboot=win10c.0, bootmgr=boot1ec.exe, bcd=1Ec,winpe=winp2.wim, sif=autounattende2.xml'
-
+```
 - cobbler sync
 - Install Windows
