--- a/_posts/2020-12-04-windows.md
+++ b/_posts/2020-12-04-windows.md
@@ -65,21 +65,22 @@ and copy the Windows distributions there:
 Copy the following files to the distributions directories (for Windows 7 and newer):
 
 PXE + Legacy BIOS Boot
-- pxeboot.n12
-- bootmgr.exe
-- boot/BCD
-- boot/boot.sdi
+
+    pxeboot.n12
+    bootmgr.exe
+    boot/BCD
+    boot/boot.sdi
 
 iPXE + UEFI BIOS Boot
-- ipxe-x86_64.efi
-- ipxe-x86_64.efi
-- wimboot
-- boot/bootx64.efi
-- boot/BCD
-- boot/boot.sdi
+
+    ipxe-x86_64.efi
+    wimboot
+    boot/bootx64.efi
+    boot/BCD
+    boot/boot.sdi
 
 - Share `/var/lib/tftpboot/winos` via Samba:
-```
+```conf
     vi /etc/samba/smb.conf
             [WINOS]
             path = /var/lib/tftpboot/winos
@@ -510,7 +511,7 @@ Example:
     DEL /F /S /Q %systemdrive%\TMP\*.*
     exit
 ```
-- Add Windows to the network installation menu in the `/etc/cobbler/boot_loader_conf/pxedefault.template` file:
+- If you need your own custom boot menu, add Windows to the network install menu in the `/etc/cobbler/boot_loader_conf/pxedefault.template` file:
 ```
     menu begin Windows
     MENU TITLE Windows
