--- a/_posts/2020-12-04-wingen.md
+++ b/_posts/2020-12-04-wingen.md
@@ -15,17 +15,20 @@ Cobbler has an excellent architectural feature of expanding functionality by wri
 
 Linux currently has all the necessary tools to prepare these files. All that remains is to combine these tools in the trigger code to get an open source infrastructure for deploying Windows without using proprietary Microsoft tools.
 
-Trigger sync_post_wingen.py does:
-- some of the files are created from standard ones (`pxeboot.n12`, `bootmgr.exe`) by directly replacing one sting with another directly in the binary
+Trigger sync_post_wingen.py:
+- some of the files are created from standard ones (`pxeboot.n12`, `bootmgr.exe`) by directly replacing one string with another directly in the binary
 - in the process of changing the bootmgr.exe file, the checksum of the PE file will change and it needs to be recalculated. The trigger does this with `python-pefile`
-- `python3-hivex` is used to modify Windows boot configuration data (BCD). For pxelibux distro boot_loader in BCD, paths to `winpe.wim` and `boot.sdi` are generated as `/winos/<distro_name>/boot`, and for iPXE - `\Boot`.
+- `python3-hivex` is used to modify Windows boot configuration data (BCD). For pxelinux distro boot_loader in BCD, paths to `winpe.wim` and `boot.sdi` are generated as `/winos/<distro_name>/boot`, and for iPXE - `\Boot`.
 - uses `wimlib-tools` to replace `startnet.cmd` startup script in WIM image
-- Windows answer files (`autounattended.xml`) are generated using Cobbler templates, with all of its conditional code generation capabilities, depending on the Windows version, architecture (32 or 64 bit), installation profile, etc.
-- startup scripts for WIM images (`startnet.cmd`) and a script that is launched after OS installation (`post_install.cmd`) are also generated from templates
+
+Windows answer files (`autounattended.xml`) are generated using Cobbler templates, with all of its conditional code generation capabilities, depending on the Windows version, architecture (32 or 64 bit), installation profile, etc.
+
+Startup scripts for WIM images (`startnet.cmd`) and a script that is launched after OS installation (`post_install.cmd`) are also generated from templates
 
 Post-installation actions such as installing additional software, etc., are performed using the Automatic Installation Template (`win.ks`).
 
 A logically automatic network installation of Windows 7 and newer can be represented as follows:
+
 PXE + Legacy BIOS Boot
 
     Original files: pxeboot.n12 → bootmgr.exe → BCD → winpe.wim → startnet.cmd → autounattended.xml
