--- a/downloads/3.x.x.md
+++ b/downloads/3.x.x.md
@@ -11,6 +11,7 @@ title: Cobbler 3.0.x
 - [Cobbler 3.1.1](https://github.com/cobbler/cobbler/releases/tag/v3.1.1)
 - [Cobbler 3.1.2](https://github.com/cobbler/cobbler/releases/tag/v3.1.2)
 - [Cobbler 3.2.0](https://github.com/cobbler/cobbler/releases/tag/v3.2.0)
+- [Cobbler 3.2.1](https://github.com/cobbler/cobbler/releases/tag/v3.2.1)
 
 ## Packages
 
