Further improve the layout

--- a/downloads/2.x.x.md
+++ b/downloads/2.x.x.md
@@ -1,14 +1,16 @@
 ---
 layout: default
-title: Cobbler 2.4.x
+title: Cobbler 2.x.x
 ---
+
+# Cobbler Downloads for Versions 2.x.x
 
 **WARNING**: This release series is EOL and depends on an EOL Python Version. Please do not use this version. This page
 is just existing for historical purposes. 
 
 ## Source
 
-## 2.4.x
+### 2.4.x
 
 - [Cobbler 2.4.9](https://github.com/cobbler/cobbler/releases/tag/v2.4.9)
 - [Cobbler 2.4.8](https://github.com/cobbler/cobbler/releases/tag/v2.4.8)
@@ -21,7 +23,7 @@ is just existing for historical purposes.
 - [Cobbler 2.4.1](https://github.com/cobbler/cobbler/releases/tag/v2.4.1)
 - [Cobbler 2.4.0](https://github.com/cobbler/cobbler/releases/tag/cobbler-2.4.0-1)
 
-## 2.6.x
+### 2.6.x
 
 - [Cobbler 2.6.11](https://github.com/cobbler/cobbler/releases/tag/v2.6.11)
 - [Cobbler 2.6.10](https://github.com/cobbler/cobbler/releases/tag/v2.6.10)
@@ -36,7 +38,7 @@ is just existing for historical purposes.
 - [Cobbler 2.6.1](https://github.com/cobbler/cobbler/releases/tag/v2.6.1)
 - [Cobbler 2.6.0](https://github.com/cobbler/cobbler/releases/tag/v2.6.0)
 
-## 2.8.x
+### 2.8.x
 
 - [Cobbler 2.8.5](https://github.com/cobbler/cobbler/releases/tag/v2.8.5)
 - [Cobbler 2.8.4](https://github.com/cobbler/cobbler/releases/tag/v2.8.4)
