Adress some concerns by the review from @nodeg

--- a/_posts/2021-03-04-cobbler_3.2.1_released.md
+++ b/_posts/2021-03-04-cobbler_3.2.1_released.md
@@ -1,3 +1,10 @@
+---
+layout: post
+title: Cobbler 3.2.1 Released
+author: Enno
+summary: Announcing the release of Cobbler 3.2.1.
+---
+
 This release is a lot about bug fixes and smaller improvements.
 
 Important: This will be the very last release to contain the already deprecated Django Web Interface.
