--- a/downloads/3.x.x.md
+++ b/downloads/3.x.x.md
@@ -14,6 +14,8 @@ title: Cobbler 3.x.x
 - [Cobbler 3.1.2](https://github.com/cobbler/cobbler/releases/tag/v3.1.2)
 - [Cobbler 3.2.0](https://github.com/cobbler/cobbler/releases/tag/v3.2.0)
 - [Cobbler 3.2.1](https://github.com/cobbler/cobbler/releases/tag/v3.2.1)
+- [Cobbler 3.2.2](https://github.com/cobbler/cobbler/releases/tag/v3.2.2)
+- [Cobbler 3.3.0](https://github.com/cobbler/cobbler/releases/tag/v3.3.0)
 
 ## Packages
 
