Update Cobbler to 3.3.4

--- a/downloads/3.x.x.md
+++ b/downloads/3.x.x.md
@@ -19,8 +19,20 @@ title: Cobbler 3.x.x
 - [Cobbler 3.3.1](https://github.com/cobbler/cobbler/releases/tag/v3.3.1)
 - [Cobbler 3.3.2](https://github.com/cobbler/cobbler/releases/tag/v3.3.2)
 - [Cobbler 3.3.3](https://github.com/cobbler/cobbler/releases/tag/v3.3.3)
+- [Cobbler 3.3.4](https://github.com/cobbler/cobbler/releases/tag/v3.3.4)
 
 ## Packages
 
 For the most current version we can provide please have a look at:
 <https://build.opensuse.org/package/show/systemsmanagement/cobbler>
+
+## Repositories
+
+We do provide offical community maintained repositories with packages for most distributions:
+
+- Cobbler 3.0.x: <https://software.opensuse.org/download/package?package=cobbler&project=systemsmanagement%3Acobbler%3Arelease30>
+- Cobbler 3.1.x: <https://software.opensuse.org/download/package?package=cobbler&project=systemsmanagement%3Acobbler%3Arelease31>
+- Cobbler 3.2.x: <https://software.opensuse.org/download/package?package=cobbler&project=systemsmanagement%3Acobbler%3Arelease32>
+- Cobbler 3.3.x: <https://software.opensuse.org/download/package?package=cobbler&project=systemsmanagement%3Acobbler%3Arelease33>
+
+The repositories will always contain the latest stable minor version in that release series.
