--- a/downloads/3.x.x.md
+++ b/downloads/3.x.x.md
@@ -20,6 +20,7 @@ title: Cobbler 3.x.x
 - [Cobbler 3.3.2](https://github.com/cobbler/cobbler/releases/tag/v3.3.2)
 - [Cobbler 3.3.3](https://github.com/cobbler/cobbler/releases/tag/v3.3.3)
 - [Cobbler 3.3.4](https://github.com/cobbler/cobbler/releases/tag/v3.3.4)
+- [Cobbler 3.3.5](https://github.com/cobbler/cobbler/releases/tag/v3.3.5)
 
 ## Packages
 
