--- a/_posts/2024/2024-11-12-Cobbler-v3.3.6-Beginners-Guide.md
+++ b/_posts/2024/2024-11-12-Cobbler-v3.3.6-Beginners-Guide.md
@@ -203,6 +203,10 @@ sed -i "s/pxe_just_once: true/pxe_just_once: false/" /etc/cobbler/settings.yaml
 sed -i "s/enable_ipxe: false/enable_ipxe: true/" /etc/cobbler/settings.yaml
 ```
 
+> Even if you do not enable iPXE above, it won't hurt to symlink the correct file that cobbler points to in the `/etc/cobbler/dhcp.template` file.
+>
+> `sudo ln -s /usr/share/ipxe/undionly.kpxe /var/lib/cobbler/loaders/undionly.kpxe`
+
 Edit the subnet decaration in **/etc/cobbler/dhcp.tempate** to match the **enp0s8** interface:
 
 ```shell
