finishing Debian Guide

--- a/_posts/2024/2024-12-02-Cobbler-v3.3.6-Debian-Deployment-Guide.md
+++ b/_posts/2024/2024-12-02-Cobbler-v3.3.6-Debian-Deployment-Guide.md
@@ -3,7 +3,6 @@ layout: post
 title: Cobbler (v3.3.6) Debian Deployment Guide
 author: Sus-Admin
 summary: Deploying Debian Bullseye and Bookworm (11 & 12) via PXE network boot.
-tags: cobbler
 ---
 
 This guide assumes that you have a Fedora 34 server or workstation configured to run Cobbler v3.3.6 server as described in the [Cobbler v3.3.6 Beginner's guide](/_post/2024-10-16-Cobbler-v3.3.6-Beginners-Guide.md).
@@ -20,15 +19,15 @@ Starting where the [Beginner's guide](/_post/2024-10-16-Cobbler-v3.3.6-Beginners
 
 ### Caveats
 
-- using the `cobbler check` CLI command on the Cobbler server, you should notice that it recommends installing the **debmirror** package in order to manage Debian deployments and repos with Cobbler. Instead, we will simply import the Debian source installation media (.iso file), which will become available over HTTP, and use that as the local repo mirror to install over the network.
+- using the `cobbler check` CLI command, the output recommends installing the **debmirror** package in order to manage Debian deployments and repos with Cobbler. Instead, we will simply import the Debian source installation media (.iso file), which will become available over HTTP, and use that as the local repo mirror to install over the network.
 
     - This method is not the Cobbler official method, and Debian actually [recommends](https://www.debian.org/mirror/ftpmirror) using something like "apt-cacher-ng" or "squid proxy" instead of "debmirror"
 
-    - The Main Debian repo for the latest release of Debian is about 100 GB at the time of writing, which is why this is the preferred method over using **debmirror**, as it only requires the data from a single Debian installer DVD (.iso file)
+    - The Main Debian repo for the latest release of Debian is about 100 GB at the time of writing, which is why this is *my* preferred method over using **debmirror**, as it only requires the data from a single Debian installer DVD (.iso file)
 
         - For completeness however, the **debmirror** method will be detailed towards the bottom of this guide, in the **Mirroring with debmirror** section.
 
-- This guide provides a workaround to an issue that is encountered when installing Debian 11 & 12 over the network from a local/private repo where the PXE client (`debian-installer`) does not trust the installation source *(Since Debian developers DO NOT sign the software/repos packaged into official DVD/ISO releases: (https://wiki.debian.org/SecureApt)[https://wiki.debian.org/SecureApt] )*.
+- This guide provides a workaround to an issue that is encountered when installing Debian 11 & 12 over the network from a local/private repo where the PXE client (`debian-installer`) does not trust the installation source *(Since Debian developers DO NOT sign the software/repos packaged into official DVD/ISO releases: [https://wiki.debian.org/SecureApt](https://wiki.debian.org/SecureApt) )*.
 
     - This appears to be a bug in the `debian-installer` (`d-i`); more info provided in the **Tips & Troubleshooting** section below.
 
@@ -213,9 +212,9 @@ similarly to the DVD/ISO method above, both the **netboot** and **DVD/ISO** `ini
 
 Since the official Debian repo will be mirrored, the source will be fully valid with trusted signatures, meaning the autoinstall (preseed) file for the PXE client will not need the APT security settings required in the DVD/ISO source method.
 
-Cobbler supports managing repos/sources via the debmirror command natively, which mean the `debmirror` package only needs to be installed and configured, then mirroring can be accomplished/managed through Cobbler CLI commands.
+Cobbler supports managing repos/sources via the debmirror command natively, which means the `debmirror` package only needs to be installed and configured, then mirroring can be accomplished/managed through Cobbler CLI commands.
 
-    - The syntax for mirroring a Debian repo through the `debmirror` command will still be provided below for context in the **Manual debmirror** section below, but is not necessary in most cases to mirror Debian locally.
+    - The syntax for mirroring a Debian repo through the `debmirror` command will still be provided below for context in the **Manual debmirror** section, but is not necessary in most cases to mirror Debian locally.
 
 ### Setup debmirror
 
