--- a/_posts/2024/2024-12-02-Cobbler-v3.3.6-Debian-Deployment-Guide.md
+++ b/_posts/2024/2024-12-02-Cobbler-v3.3.6-Debian-Deployment-Guide.md
@@ -3,6 +3,7 @@ layout: post
 title: Cobbler (v3.3.6) Debian Deployment Guide
 author: Sus-Admin
 summary: Deploying Debian Bullseye and Bookworm (11 & 12) via PXE network boot.
+tags: cobbler
 ---
 
 This guide assumes that you have a Fedora 34 server or workstation configured to run Cobbler v3.3.6 server as described in the [Cobbler v3.3.6 Beginner's guide](/_post/2024-10-16-Cobbler-v3.3.6-Beginners-Guide.md).
@@ -21,13 +22,13 @@ Starting where the [Beginner's guide](/_post/2024-10-16-Cobbler-v3.3.6-Beginners
 
 - using the `cobbler check` CLI command, the output recommends installing the **debmirror** package in order to manage Debian deployments and repos with Cobbler. Instead, we will simply import the Debian source installation media (.iso file), which will become available over HTTP, and use that as the local repo mirror to install over the network.
 
-    - This method is not the Cobbler official method, and Debian actually [recommends](https://www.debian.org/mirror/ftpmirror) using something like "apt-cacher-ng" or "squid proxy" instead of "debmirror"
+    - This method is not the Cobbler official method, and Debian actually [recommends](https://www.debian.org/mirror/ftpmirror) using something like "apt-cacher-ng" or "squid proxy"
 
     - The Main Debian repo for the latest release of Debian is about 100 GB at the time of writing, which is why this is *my* preferred method over using **debmirror**, as it only requires the data from a single Debian installer DVD (.iso file)
 
         - For completeness however, the **debmirror** method will be detailed towards the bottom of this guide, in the **Mirroring with debmirror** section.
 
-- This guide provides a workaround to an issue that is encountered when installing Debian 11 & 12 over the network from a local/private repo where the PXE client (`debian-installer`) does not trust the installation source *(Since Debian developers DO NOT sign the software/repos packaged into official DVD/ISO releases: [https://wiki.debian.org/SecureApt](https://wiki.debian.org/SecureApt) )*.
+- This guide provides a workaround to an issue that is encountered when installing Debian 11 & 12 over the network from a local/private repo where the PXE client (`debian-installer`) does not trust the installation source *(Since Debian developers DO NOT sign the software/repos packaged into official CD/DVD/ISO releases: [https://wiki.debian.org/SecureApt](https://wiki.debian.org/SecureApt) )*.
 
     - This appears to be a bug in the `debian-installer` (`d-i`); more info provided in the **Tips & Troubleshooting** section below.
 
@@ -44,14 +45,14 @@ That said, continue at your own risk.
 Download the latest releases of Debian Bookworm and Bullseye
 
 ```shell
-cd ~/Downloads && wget https://cdimage.debian.org/debian-cd/current/amd64/iso-dvd/debian-12.7.0-amd64-DVD-1.iso
+cd ~/Downloads && wget https://cdimage.debian.org/debian-cd/current/amd64/iso-dvd/debian-12.8.0-amd64-DVD-1.iso
 cd ~/Downloads && wget https://cdimage.debian.org/mirror/cdimage/archive/11.11.0/amd64/iso-dvd/debian-11.11.0-amd64-DVD-1.iso
 ```
 
 Additionally, all Debian releases at the time of writing require the "netboot" initial ramdisk (`initrd`) provided separately by the Debian maintainers in order to properly boot over the network. Furthermore, Debian 11 Bullseye and earlier require the "netboot firmware" image, which is an extension to the netboot `initrd` image containing drivers for non-free firmware, also provided by Debian.
 
 ```shell
-wget -O ~/Downloads/Debian12.7-netboot.gz https://ftp.debian.org/debian/dists/stable/main/installer-amd64/current/images/netboot/debian-installer/amd64/initrd.gz
+wget -O ~/Downloads/Debian12.8-netboot.gz https://ftp.debian.org/debian/dists/stable/main/installer-amd64/current/images/netboot/debian-installer/amd64/initrd.gz
 
 wget -O ~/Downloads/Debian11.11-netboot.gz  https://ftp.debian.org/debian/dists/bullseye/main/installer-amd64/current/images/netboot/debian-installer/amd64/initrd.gz
 wget -O ~/Downloads/Debian11.11-firmware.gz https://cdimage.debian.org/cdimage/firmware/bullseye/current/firmware.cpio.gz
@@ -87,14 +88,14 @@ mount the Debian 12 Bookworm installation media and import the distro into cobbl
 
 ```shell
 [ -e /mnt/Debian ] || mkdir /mnt/Debian
-mount -t iso9660 -o loop,ro /home/fedora/Downloads/debian-12.7.0-amd64-DVD-1.iso /mnt/Debian
-cobbler import --name Debian12.7 --path /mnt/Debian
+mount -t iso9660 -o loop,ro /home/fedora/Downloads/debian-12.8.0-amd64-DVD-1.iso /mnt/Debian
+cobbler import --name Debian12.8 --path /mnt/Debian
 ```
 
 Navigate to the imported distro mirror and sign the repo:
 
 ```shell
-cd /var/www/cobbler/distro_mirror/Debian12.7/dists/bookworm
+cd /var/www/cobbler/distro_mirror/Debian12.8/dists/bookworm
 gpg -u cobbler -bao Release.gpg Release
 gpg -u cobbler --clear-sign --output InRelease Release
 ```
@@ -102,9 +103,9 @@ gpg -u cobbler --clear-sign --output InRelease Release
 Concatenate the two `initrd.gz` images in the following order, then configure the new Cobbler Distro to use the combined image:
 
 ```shell
-cat /var/www/cobbler/distro_mirror/Debian12.7/install.amd/initrd.gz ~/Downloads/Debian12.7-netboot.gz > /var/www/cobbler/pub/Debian12.7-netboot.gz
+cat /var/www/cobbler/distro_mirror/Debian12.8/install.amd/initrd.gz ~/Downloads/Debian12.8-netboot.gz > /var/www/cobbler/pub/Debian12.8-netboot.gz
 
-cobbler distro edit --name Debian12.7-x86_64 --initrd "/var/www/cobbler/pub/Debian12.7-netboot.gz"
+cobbler distro edit --name Debian12.8-x86_64 --initrd "/var/www/cobbler/pub/Debian12.8-netboot.gz"
 ```
 
 Create a new "preseed" (autoinstall) template from the sample included with Cobbler, and make the necessary changes to install from an unofficial source.
@@ -159,13 +160,13 @@ sed -i 's,script=preseed_late_default,script=preseed_late_sudo_sources,' /var/li
 Configure the Cobbler Profile to use the new autoinstall (preseed) template:
 
 ```shell
-cobbler profile edit --name Debian12.7-x86_64 --autoinstall 'bookworm-sample.seed'
+cobbler profile edit --name Debian12.8-x86_64 --autoinstall 'bookworm-sample.seed'
 ```
 
 Create a new Cobbler System to PXE boot and automatically install Debian 12 Bookworm, replacing the *"aa:bb:cc:dd:ee:ff"* with the MAC address of your PXE client, being sure not to use a duplicate MAC or IP addresse of any other Cobbler System.
 
 ```shell
-cobbler system add --name "Debian12.7" --profile Debian12.7-x86_64 --hostname "debian12-7" --mac-address "aa:bb:cc:dd:ee:ff" --netboot-enabled true --ip-address "10.0.0.12" --netmask "255.255.255.0" --gateway "10.0.0.1" --name-servers "10.0.0.1 1.1.1.1 8.8.8.8"
+cobbler system add --name "Debian12.8" --profile Debian12.8-x86_64 --hostname "debian12-8" --mac-address "aa:bb:cc:dd:ee:ff" --netboot-enabled true --ip-address "10.0.0.12" --netmask "255.255.255.0" --gateway "10.0.0.1" --name-servers "10.0.0.1 1.1.1.1 8.8.8.8"
 ```
 
 Finally, restart and sync up Cobbler:
@@ -175,7 +176,7 @@ systemctl restart cobblerd && sleep 10
 cobbler sync
 ```
 
-The **PXE Client** VM can now be powered on, and should automatically boot to PXE and install Debian 12.7 to the VM HDD using the "bookworm-sample.seed" preseed template created above.
+The **PXE Client** VM can now be powered on, and should automatically boot to PXE and install Debian 12.8 to the VM HDD using the "bookworm-sample.seed" preseed template created above.
 
 ## Debian 11 Bullseye PXE Deployment
 
@@ -214,7 +215,7 @@ Since the official Debian repo will be mirrored, the source will be fully valid 
 
 Cobbler supports managing repos/sources via the debmirror command natively, which means the `debmirror` package only needs to be installed and configured, then mirroring can be accomplished/managed through Cobbler CLI commands.
 
-    - The syntax for mirroring a Debian repo through the `debmirror` command will still be provided below for context in the **Manual debmirror** section, but is not necessary in most cases to mirror Debian locally.
+- The syntax for mirroring a Debian repo through the `debmirror` command will still be provided below for context in the **Manual debmirror** section, but is not necessary in most cases to mirror Debian locally.
 
 ### Setup debmirror
 
@@ -233,7 +234,7 @@ cobbler check
 
 Sometimes debmirror may fail to download a few files from the configured source, which can cause Cobbler to error out on the `reposync` task/command.
 
-    - Usually re-issueing the `reposync` command (and in-turn, the `debmirror command) after such a failure will complete the download of the missing files.
+- Usually re-issueing the `reposync` command (and in-turn, the `debmirror` command) after such a failure will complete the download of the missing files.
 
 This manual `debmirror` method may be useful for troubleshooting
 
@@ -257,9 +258,9 @@ cp /var/lib/cobbler/templates/bookworm-sample.seed /var/lib/cobbler/templates/bo
 sed -i 's,d-i apt-setup/local0/repository,#d-i apt-setup/local0/repository,' /var/lib/cobbler/templates/bookworm-latest.seed
 sed -i 's,d-i apt-setup/local0/key,#d-i apt-setup/local0/key,' /var/lib/cobbler/templates/bookworm-latest.seed
 sed -i 's,d-i debian-installer/allow_unauthenticated,#d-i debian-installer/allow_unauthenticated,' /var/lib/cobbler/templates/bookworm-latest.seed
-sed -i 's,script=preseed_early_default,script=preseed_early_debmirror,' /var/lib/cobbler/templates/bookworm-latest.seed
-cp /var/lib/cobbler/scripts/preseed_early_default /var/lib/cobbler/scripts/preseed_early_bookworm
-echo -e '#!/bin/sh\nexit' | tee /var/lib/cobbler/scripts/preseed_early_bookworm
+sed -i 's,script=preseed_early_workaround,script=preseed_early_skip,' /var/lib/cobbler/templates/bookworm-latest.seed
+cp /var/lib/cobbler/scripts/preseed_early_workaround /var/lib/cobbler/scripts/preseed_early_skip
+echo -e '#!/bin/sh\nexit' | tee /var/lib/cobbler/scripts/preseed_early_skip
 ```
 
 Download the kernel and 2 initrd files for Debiain latest/current (12.8)
